apps/task-registry/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #TODO(Berry): use treafik basic auth middleware
spec:
  rules:
    - host: task-registry.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - task-registry.apps.digilab.network
      secretName: task-registry-tls
